UCF-APR2.4/ftr main/force-app/main/default/objects/Custom_Field_Validation__mdt/Custom_Field_Validation__mdt.object-meta.xml
<CustomObject>
    <label>Custom Field Validation</label>
    <pluralLabel>Custom Field Validations</pluralLabel>
</CustomObject>