UCF-APR2.4/ftr main/force-app/main/default/objects/Custom_Field_Validation__mdt/fields/Exclude_Products__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Products__c</fullName>
    <label>Exclude Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>