UCF-APR2.4/ftr main/force-app/main/default/objects/Custom_Field_Validation__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>