UCF-APR2.4/ftr main/force-app/main/default/objects/Custom_Field_Validation__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>