UCF-APR2.4/ftr main/force-app/main/default/objects/Custom_Field_Validation__mdt/fields/Validation_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Validation_Set_Name__c</fullName>
    <label>Validation Set Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>